--- a/doc/finalreport/abstract.tex
+++ b/doc/finalreport/abstract.tex
@@ -1,6 +1,5 @@
 \begin{abstract}
 	\thispagestyle{plain}
-	\acf{AWESOME} is a tool used to evaluate the performance and quality of teaching of modules at Aberystwyth University.
-	The aims of this project are to ensure the prototype version of \acs{AWESOME} is security audited, refactored to use better programming practices, fully functioning, and is deployed to capture module evaluation data.
-	%TODO: Rewrite Abstract
+	\acf{AWESOME} is an open-source, web-based tool that enables departments to generate personalised questionnaires that are sent to students to gather feedback about modules.
+	The aim of this project is to rewrite the \ac{AWESOME} prototype and have it replace existing methods of module evaluation in the Computer Science department at \acf{AU} by improving upon, and fixing problems with the existing module evaluation procedures.
 \end{abstract}
