--- a/doc/finalreport/acronyms-list.tex
+++ b/doc/finalreport/acronyms-list.tex
@@ -4,6 +4,7 @@
 \acro{CI}{Continous Integration}
 \acro{CSV}{Comma-Separated Values}
 \acro{i18n}{Internationalisation}
+\acro{IS}{Information Services}
 \acro{MEQ}{Module Evaluation Questionnaires}
 \acro{MVC}{Model-view-controller}
 \acro{OOP}{Object-oriented programming}
@@ -12,3 +13,5 @@
 \acro{SME}{Student Module Evaluation}
 \acro{SQL}{Structured Query Language}
 \acro{SSCC}{Staff Student Consultative Committees}
+\acro{UML}{Unified Modeling Language}
+\acro{VPN}{Virtual Private Network}
