--- a/doc/finalreport/bibliography.bib
+++ b/doc/finalreport/bibliography.bib
@@ -1,3 +1,19 @@
+@misc{mitlicense,
+	title = {MIT License},
+	url = {http://opensource.org/licenses/MIT},
+	author = {Massachusetts Institute of Technology},
+	note = {(\url{http://opensource.org/licenses/MIT}) Accessed: 2015-05-04}
+}
+
+@misc{gplv3afferolicense,
+	title = {GNU Affero General Public License, Version 3},
+	url = {https://www.gnu.org/licenses/agpl-3.0.html},
+	author = {Free Software Foundation, Inc.},
+	month = nov,
+	year = {2007},
+	note = {(\url{https://www.gnu.org/licenses/agpl-3.0.html}) Accessed: 2015-05-04}
+}
+
 @misc{phpmailer,
 	author = {},
 	title = {PHPMailer GitHub Repository},
